
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned long hex2raw (unsigned char*,unsigned char*) ;
 int inverse (unsigned char*,unsigned long) ;
 unsigned long strlen (unsigned char*) ;

int
encode_uuid(unsigned char *uuid, unsigned char *out)
{
 unsigned long i, len, ret;
 unsigned cnt = 0, ar = 0;
 unsigned char *ptr;

 ptr = uuid;
 len = strlen(uuid);
 for (i = 0; i < len; i++) {
  if (uuid[i] == '-') {
   uuid[i] = '\0';
   if (ar < 3) {
    ret = hex2raw(ptr, out);
    inverse(out, ret);
    out += ret; cnt += ret;
   }
   else {
    ret = hex2raw(ptr, out);
    out += ret; cnt += ret;
   }
   ptr = uuid+i+1;
   ar++;
  }
 }
 out[len] = '\0';

 ret = hex2raw(ptr, out);
 out += ret; cnt += ret;

return cnt;
}
